# aces-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  openapi.yaml  package-lock.json  pyproject.toml
api/: __init__.py
api/admin/: __init__.py  main.py
api/auth/: __init__.py  main.py  openapi.yaml
api/projects/: __init__.py  main.py
api/users/: __init__.py  main.py
db/: __init__.py  main.py
models/: __init__.py  user.py
static/: login.html  projectstest.html
