[project]
name = "aces-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "gunicorn>=23.0.0",
    "orjson>=3.11.3",
    "pyairtable>=3.2.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.37.0",
]
