[project]
name = "aces-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.3",
    "gunicorn>=23.0.0",
    "logto>=0.2.1",
    "orjson>=3.11.4",
    "pyairtable>=3.3.0",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.10.1",
    "pyopenssl>=25.3.0",
    "pyotp>=2.9.0",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncpg]>=2.0.44",
    "uvicorn>=0.38.0",
]
